@@ -92,59 +92,25 @@
     </repository>
   </repositories>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-    
-    <ldapbp.version>1.0</ldapbp.version>
-    <slf4j.version>1.7.32</slf4j.version>
-    <log4j.version>2.25.3</log4j.version>
+  <properties>    
+    <slf4j.version>1.7.36</slf4j.version>
     <jaxb.version>2.3.1</jaxb.version>
+
+    <targetJdk>11</targetJdk>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>com.sun</groupId>
-      <artifactId>ldapbp</artifactId>
-      <version>${ldapbp.version}</version>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>${log4j.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>${log4j.version}</version>
-      <scope>test</scope>
-    </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <groupId>org.glassfish.main.external</groupId>
+      <artifactId>ldapbp-repackaged</artifactId>
+      <version>5.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -153,10 +119,17 @@
       <version>${jaxb.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
   <build>
     <defaultGoal>clean test</defaultGoal>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -175,6 +148,31 @@
                 </requireMavenVersion>
               </rules>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.gaul</groupId>
+        <artifactId>modernizer-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <javaVersion>${targetJdk}</javaVersion>
+          <exclusions>
+            <exclusion>java/util/Enumeration</exclusion>
+            <exclusion>java/util/Hashtable."&lt;init&gt;":(IF)V</exclusion>
+            <exclusion>java/util/Hashtable."&lt;init&gt;":(I)V</exclusion>
+            <exclusion>java/util/Hashtable."&lt;init&gt;":()V</exclusion>
+            <exclusion>java/util/Hashtable."&lt;init&gt;":(Ljava/util/Map;)V</exclusion>
+          </exclusions>
+        </configuration>
+        <executions>
+          <execution>
+            <id>modernizer-check</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>modernizer</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
@@ -282,12 +280,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.0</version>
+        <version>3.5.3</version>
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <encoding>utf-8</encoding>
           <runOrder>alphabetical</runOrder>
-          <skipTests>false</skipTests>
           <includes>
             <include>**/unit/*Test.java</include>
           </includes>
@@ -299,8 +296,16 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.14.1</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <source>${targetJdk}</source>
+          <target>${targetJdk}</target>
+          <useIncrementalCompilation>false</useIncrementalCompilation>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>true</showDeprecation>
+          <compilerArgument>-Xlint:unchecked</compilerArgument>
+          <compilerArgs>
+            <arg>--add-exports</arg>
+            <arg>java.naming/com.sun.jndi.ldap=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
@@ -329,10 +334,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <redirectTestOutputToFile>true</redirectTestOutputToFile>
-              <encoding>utf-8</encoding>
-              <runOrder>alphabetical</runOrder>
-              <skipTests>false</skipTests>
+              <argLine>--add-opens java.naming/com.sun.jndi.ldap=ALL-UNNAMED</argLine>
               <includes>
                 <include>**/it/*Test.java</include>
               </includes>
@@ -365,7 +367,15 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.11.3</version>
+            <version>3.12.0</version>
+            <configuration>
+              <doclint>none</doclint>
+              <release>${targetJdk}</release>
+              <additionalOptions>
+                <additionalOption>--legal-notices</additionalOption>
+                <additionalOption>none</additionalOption>
+              </additionalOptions>
+            </configuration>            
             <executions>
               <execution>
                 <id>attach-javadocs</id>
